--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@stripe/react-stripe-js": "^2.5.0",
+    "@tanstack/react-query": "^5.20.5",
+    "axios": "^1.6.7",
     "date-fns": "^2.30.0",
     "firebase": "^10.7.1",
     "match-sorter": "^6.3.1",
